--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
     background-image: url('IMG/IMG_20210714_223217.jpg');
+    background-repeat : no-repeat;
     background-attachment: fixed;
 }
